# devops-patterns

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
IaC/: cdk.json  cdktf.json  terraform.ts
kubernetes/helm/basic/: deployment-advanced.yaml  deployment.yaml  service.yaml  values.yaml
kubernetes/helm/chart/: Chart.yaml  README.md
terraform/: local.tf  main.py  main.ts
terraform/aws/: ec2.tf  main.tf
terraform/basic/: .terraform.lock.hcl  variables.tf
terraform/each_count/: main.tf
terraform/modules/: app_server.tf  dynamodb_table.tf  s3_bucket.tf  variables.tf
terraform/modules/uk-payroll-app/: main.tf
terraform/modules/us-payroll-app/: main.tf
