[project]
name = "devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.6.7",
    "cdktf>=0.20.9",
    "cdktf-cdktf-provider-docker>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
